--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ body {
   max-width: 500px;
   width: 100%;
   margin: auto;
+
 }
 .container > form {
   width: 70%;
@@ -34,6 +35,7 @@ p {
 }
 h1{
   color:#fffffe;
+  
 }
 .fluid ui button blue{
   color:#232946;
@@ -41,10 +43,12 @@ h1{
 input{
   background-color: #232946 ;
   font-size: 20px;
+  color: #b8c1ec;
   
 }
 label{
   color:#b8c1ec;
+  font-size: 30px;
 }
 .ui_message_success{
   color:#b8c1ec;
